// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`appearance > a colour theme's variables 1`] = `
{
  "custom": [
    {
      "--p-accent": "#4f46e5",
      "--p-accent-d": "#847eed",
      "--p-chart": "#0d9488",
      "--p-chart-d": "#56b4ac",
      "--p-on-accent": "#ffffff",
      "--p-on-accent-d": "#141414",
      "--p-side": "#e0dbdc",
      "--p-side-d": "#161727",
    },
    {
      "--p-accent": "#1f2937",
      "--p-accent-d": "#848991",
      "--p-chart": "#475569",
      "--p-chart-d": "#7e8896",
      "--p-on-accent": "#ffffff",
      "--p-on-accent-d": "#141414",
      "--p-side": "#ddd9d0",
      "--p-side-d": "#121519",
    },
  ],
  "themes": {
    "aubergine": {
      "--p-accent": "#b0306a",
      "--p-accent-d": "#f06ea9",
      "--p-chart": "#6b3fa0",
      "--p-chart-d": "#b18ae6",
      "--p-on-accent": "#ffffff",
      "--p-on-accent-d": "#141414",
      "--p-side": "#ece3ee",
      "--p-side-d": "#1b1320",
    },
    "classic": {
      "--p-accent": "#c8671d",
      "--p-accent-d": "#f0a35e",
      "--p-chart": "#2a78d6",
      "--p-chart-d": "#3987e5",
      "--p-on-accent": "#141414",
      "--p-on-accent-d": "#141414",
      "--p-side": "#ebe6db",
      "--p-side-d": "#111316",
    },
    "clear": {
      "--p-accent": "#d55e00",
      "--p-accent-d": "#f28b3c",
      "--p-chart": "#0072b2",
      "--p-chart-d": "#56b4e9",
      "--p-on-accent": "#141414",
      "--p-on-accent-d": "#141414",
      "--p-side": "#ebe6db",
      "--p-side-d": "#111316",
    },
    "forest": {
      "--p-accent": "#9a3412",
      "--p-accent-d": "#fb923c",
      "--p-chart": "#15803d",
      "--p-chart-d": "#4ade80",
      "--p-on-accent": "#ffffff",
      "--p-on-accent-d": "#141414",
      "--p-side": "#e5ebe1",
      "--p-side-d": "#101a12",
    },
    "graphite": {
      "--p-accent": "#1f2937",
      "--p-accent-d": "#f3f4f6",
      "--p-chart": "#475569",
      "--p-chart-d": "#cbd5e1",
      "--p-on-accent": "#ffffff",
      "--p-on-accent-d": "#141414",
      "--p-side": "#e6e6e3",
      "--p-side-d": "#121314",
    },
    "ocean": {
      "--p-accent": "#0e7490",
      "--p-accent-d": "#22c3e6",
      "--p-chart": "#2563eb",
      "--p-chart-d": "#60a5fa",
      "--p-on-accent": "#ffffff",
      "--p-on-accent-d": "#141414",
      "--p-side": "#e3ebf0",
      "--p-side-d": "#0e161c",
    },
    "sunset": {
      "--p-accent": "#ea580c",
      "--p-accent-d": "#fb923c",
      "--p-chart": "#c026d3",
      "--p-chart-d": "#e879f9",
      "--p-on-accent": "#141414",
      "--p-on-accent-d": "#141414",
      "--p-side": "#f3e6e0",
      "--p-side-d": "#1c1412",
    },
  },
}
`;

exports[`format > durations, counts and percentages 1`] = `
{
  "clipped": [
    "short",
    "exactly t…",
    "a much lo…",
  ],
  "durations": [
    {
      "duration": "—",
      "ms": null,
    },
    {
      "ago": "0s",
      "duration": "<1m",
      "hoursShort": "0.0",
      "hoursText": "0m",
      "ms": 0,
    },
    {
      "ago": "20s",
      "duration": "<1m",
      "hoursShort": "0.0",
      "hoursText": "0m",
      "ms": 20000,
    },
    {
      "ago": "59s",
      "duration": "1m",
      "hoursShort": "0.0",
      "hoursText": "1m",
      "ms": 59000,
    },
    {
      "ago": "1m",
      "duration": "1m",
      "hoursShort": "0.0",
      "hoursText": "1m",
      "ms": 61000,
    },
    {
      "ago": "59m",
      "duration": "1h 0m",
      "hoursShort": "1.0",
      "hoursText": "60m",
      "ms": 3599000,
    },
    {
      "ago": "1h 0m",
      "duration": "1h 0m",
      "hoursShort": "1.0",
      "hoursText": "1h",
      "ms": 3600000,
    },
    {
      "ago": "1h 30m",
      "duration": "1h 31m",
      "hoursShort": "1.5",
      "hoursText": "1.5h",
      "ms": 5430000,
    },
    {
      "ago": "47h 0m",
      "duration": "47h 0m",
      "hoursShort": "47",
      "hoursText": "47h",
      "ms": 169200000,
    },
    {
      "ago": "2d 1h",
      "duration": "2d 1h",
      "hoursShort": "49",
      "hoursText": "49h",
      "ms": 176400000,
    },
    {
      "ago": "10d 0h",
      "duration": "10d 0h",
      "hoursShort": "240",
      "hoursText": "240h",
      "ms": 864000000,
    },
  ],
  "lists": [
    "",
    "a",
    "a and b",
    "a, b, c and d",
  ],
  "numbers": [
    {
      "bytes": "—",
      "compact": "—",
      "cpu": "—",
      "n": null,
    },
    {
      "bytes": "0 B",
      "compact": "0",
      "cpu": "0.0%",
      "n": 0,
      "pct": "0",
    },
    {
      "bytes": "0 B",
      "compact": "0",
      "cpu": "0.0%",
      "n": 0.004,
      "pct": "0",
    },
    {
      "bytes": "0 B",
      "compact": "0",
      "cpu": "0.3%",
      "n": 0.3,
      "pct": "0.3",
    },
    {
      "bytes": "1 B",
      "compact": "1",
      "cpu": "1.0%",
      "n": 1,
      "pct": "1",
    },
    {
      "bytes": "10 B",
      "compact": "10",
      "cpu": "10.0%",
      "n": 9.99,
      "pct": "10",
    },
    {
      "bytes": "10 B",
      "compact": "10",
      "cpu": "10%",
      "n": 10,
      "pct": "10",
    },
    {
      "bytes": "43 B",
      "compact": "43",
      "cpu": "43%",
      "n": 42.5,
      "pct": "43",
    },
    {
      "bytes": "100 B",
      "compact": "100",
      "cpu": "100%",
      "n": 99.5,
      "pct": "100",
    },
    {
      "bytes": "100 B",
      "compact": "100",
      "cpu": "100%",
      "n": 100,
      "pct": "100",
    },
    {
      "bytes": "999 B",
      "compact": "999",
      "cpu": "999%",
      "n": 999.4,
      "pct": "999",
    },
    {
      "bytes": "1000 B",
      "compact": "1K",
      "cpu": "1000%",
      "n": 1000,
      "pct": "1000",
    },
    {
      "bytes": "1.2 KB",
      "compact": "1.2K",
      "cpu": "1235%",
      "n": 1234.5,
      "pct": "1235",
    },
    {
      "bytes": "9.8 KB",
      "compact": "10K",
      "cpu": "9999%",
      "n": 9999,
      "pct": "9999",
    },
    {
      "bytes": "9.8 KB",
      "compact": "10K",
      "cpu": "10000%",
      "n": 10000,
      "pct": "10000",
    },
    {
      "bytes": "121 KB",
      "compact": "123K",
      "cpu": "123456%",
      "n": 123456,
      "pct": "123456",
    },
    {
      "bytes": "977 KB",
      "compact": "1M",
      "cpu": "1000000%",
      "n": 1000000,
      "pct": "1000000",
    },
    {
      "bytes": "4.6 GB",
      "compact": "4.9B",
      "cpu": "4900000000%",
      "n": 4900000000,
      "pct": "4900000000",
    },
    {
      "bytes": "-1500 B",
      "compact": "-1.5K",
      "cpu": "-1500.0%",
      "n": -1500,
    },
  ],
  "pctOf": [
    "0",
    "33",
    "0.5",
    "99",
    "71",
  ],
  "plurals": [
    "0 sessions",
    "1 session",
    "2 sessions",
  ],
  "ticks30": [
    "",
    "",
    "",
    "",
    "4",
    "",
    "",
    "",
    "",
    "9",
    "",
    "",
    "",
    "",
    "14",
    "",
    "",
    "",
    "",
    "19",
    "",
    "",
    "",
    "",
    "24",
    "",
    "",
    "",
    "",
    "29",
  ],
  "ticks7": [
    "W",
    "T",
    "F",
    "S",
    "S",
    "M",
    "T",
  ],
}
`;

exports[`format > money in AED 1`] = `
[
  "null: — · —",
  "0: AED 0.00 · AED 0.00",
  "0.004: AED 0.01 · AED 0.01",
  "0.3: AED 1.10 · AED 1.10",
  "1: AED 3.67 · AED 3.67",
  "9.99: AED 36.7 · AED 36.66",
  "10: AED 36.7 · AED 36.70",
  "42.5: AED 156 · AED 155.97",
  "99.5: AED 365 · AED 365.17",
  "100: AED 367 · AED 367.00",
  "999.4: AED 3,668 · AED 3,668",
  "1000: AED 3,670 · AED 3,670",
  "1234.5: AED 4,531 · AED 4,531",
  "9999: AED 36,696 · AED 36,696",
  "10000: AED 36,700 · AED 36,700",
  "123456: AED 453,084 · AED 453,084",
  "1000000: AED 3,670,000 · AED 3,670,000",
  "4900000000: AED 17,983,000,000 · AED 17,983,000,000",
  "-1500: AED -5505.00 · AED -5505.00",
]
`;

exports[`format > money in EUR 1`] = `
[
  "null: — · —",
  "0: €0.00 · €0.00",
  "0.004: €0.00 · €0.00",
  "0.3: €0.26 · €0.26",
  "1: €0.86 · €0.86",
  "9.99: €8.59 · €8.59",
  "10: €8.60 · €8.60",
  "42.5: €36.5 · €36.55",
  "99.5: €85.6 · €85.57",
  "100: €86.0 · €86.00",
  "999.4: €859 · €859.48",
  "1000: €860 · €860.00",
  "1234.5: €1,062 · €1,062",
  "9999: €8,599 · €8,599",
  "10000: €8,600 · €8,600",
  "123456: €106,172 · €106,172",
  "1000000: €860,000 · €860,000",
  "4900000000: €4,214,000,000 · €4,214,000,000",
  "-1500: €-1290.00 · €-1290.00",
]
`;

exports[`format > money in INR at 83.5 1`] = `
[
  "null: — · —",
  "0: ₹0.00 · ₹0.00",
  "0.004: ₹0.33 · ₹0.33",
  "0.3: ₹25.1 · ₹25.05",
  "1: ₹83.5 · ₹83.50",
  "9.99: ₹834 · ₹834.16",
  "10: ₹835 · ₹835.00",
  "42.5: ₹3,549 · ₹3,549",
  "99.5: ₹8,308 · ₹8,308",
  "100: ₹8,350 · ₹8,350",
  "999.4: ₹83,450 · ₹83,450",
  "1000: ₹83,500 · ₹83,500",
  "1234.5: ₹1,03,081 · ₹1,03,081",
  "9999: ₹8,34,917 · ₹8,34,917",
  "10000: ₹8,35,000 · ₹8,35,000",
  "123456: ₹1,03,08,576 · ₹1,03,08,576",
  "1000000: ₹8,35,00,000 · ₹8,35,00,000",
  "4900000000: ₹4,09,15,00,00,000 · ₹4,09,15,00,00,000",
  "-1500: ₹-125250.00 · ₹-125250.00",
]
`;

exports[`format > money in INR at 88 1`] = `
[
  "null: — · —",
  "0: ₹0.00 · ₹0.00",
  "0.004: ₹0.35 · ₹0.35",
  "0.3: ₹26.4 · ₹26.40",
  "1: ₹88.0 · ₹88.00",
  "9.99: ₹879 · ₹879.12",
  "10: ₹880 · ₹880.00",
  "42.5: ₹3,740 · ₹3,740",
  "99.5: ₹8,756 · ₹8,756",
  "100: ₹8,800 · ₹8,800",
  "999.4: ₹87,947 · ₹87,947",
  "1000: ₹88,000 · ₹88,000",
  "1234.5: ₹1,08,636 · ₹1,08,636",
  "9999: ₹8,79,912 · ₹8,79,912",
  "10000: ₹8,80,000 · ₹8,80,000",
  "123456: ₹1,08,64,128 · ₹1,08,64,128",
  "1000000: ₹8,80,00,000 · ₹8,80,00,000",
  "4900000000: ₹4,31,20,00,00,000 · ₹4,31,20,00,00,000",
  "-1500: ₹-132000.00 · ₹-132000.00",
]
`;

exports[`format > money in JPY at 150 1`] = `
[
  "null: — · —",
  "0: ¥0 · ¥0",
  "0.004: ¥1 · ¥1",
  "0.3: ¥45 · ¥45",
  "1: ¥150 · ¥150",
  "9.99: ¥1,499 · ¥1,499",
  "10: ¥1,500 · ¥1,500",
  "42.5: ¥6,375 · ¥6,375",
  "99.5: ¥14,925 · ¥14,925",
  "100: ¥15,000 · ¥15,000",
  "999.4: ¥149,910 · ¥149,910",
  "1000: ¥150,000 · ¥150,000",
  "1234.5: ¥185,175 · ¥185,175",
  "9999: ¥1,499,850 · ¥1,499,850",
  "10000: ¥1,500,000 · ¥1,500,000",
  "123456: ¥18,518,400 · ¥18,518,400",
  "1000000: ¥150,000,000 · ¥150,000,000",
  "4900000000: ¥735,000,000,000 · ¥735,000,000,000",
  "-1500: ¥-225,000 · ¥-225,000",
]
`;

exports[`format > money in USD 1`] = `
[
  "null: — · —",
  "0: $0.00 · $0.00",
  "0.004: $0.00 · $0.00",
  "0.3: $0.30 · $0.30",
  "1: $1.00 · $1.00",
  "9.99: $9.99 · $9.99",
  "10: $10.0 · $10.00",
  "42.5: $42.5 · $42.50",
  "99.5: $99.5 · $99.50",
  "100: $100 · $100.00",
  "999.4: $999 · $999.40",
  "1000: $1,000 · $1,000",
  "1234.5: $1,235 · $1,235",
  "9999: $9,999 · $9,999",
  "10000: $10,000 · $10,000",
  "123456: $123,456 · $123,456",
  "1000000: $1,000,000 · $1,000,000",
  "4900000000: $4,900,000,000 · $4,900,000,000",
  "-1500: $-1500.00 · $-1500.00",
]
`;

exports[`format > project colours 1`] = `
{
  "hashes": [
    2166136261,
    440920331,
    2325328958,
  ],
  "hues": [
    38,
    215,
    231,
    61,
    135,
  ],
}
`;

exports[`format > times with the 12-hour clock 1`] = `
{
  "hours": [
    "12am",
    "1am",
    "2am",
    "3am",
    "4am",
    "5am",
    "6am",
    "7am",
    "8am",
    "9am",
    "10am",
    "11am",
    "12pm",
    "1pm",
    "2pm",
    "3pm",
    "4pm",
    "5pm",
    "6pm",
    "7pm",
    "8pm",
    "9pm",
    "10pm",
    "11pm",
  ],
  "out": [
    {
      "calendarDay": 1790636400000,
      "clock": "10:14pm",
      "dayLabel": "Sep 29",
      "longDate": "Tue, Sep 29",
      "nextMidnight": 1790722800000,
      "t": 1790716470000,
      "threeDaysBefore": 1790377200000,
      "weekday": "Tue",
    },
    {
      "calendarDay": 1790636400000,
      "clock": "10:09pm",
      "dayLabel": "Sep 29",
      "longDate": "Tue, Sep 29",
      "nextMidnight": 1790722800000,
      "t": 1790716170000,
      "threeDaysBefore": 1790377200000,
      "weekday": "Tue",
    },
    {
      "calendarDay": 1790636400000,
      "clock": "12:00am",
      "dayLabel": "Sep 29",
      "longDate": "Tue, Sep 29",
      "nextMidnight": 1790722800000,
      "t": 1790636400000,
      "threeDaysBefore": 1790377200000,
      "weekday": "Tue",
    },
    {
      "calendarDay": 1790636400000,
      "clock": "3:59am",
      "dayLabel": "Sep 29",
      "longDate": "Tue, Sep 29",
      "nextMidnight": 1790722800000,
      "t": 1790650740000,
      "threeDaysBefore": 1790377200000,
      "weekday": "Tue",
    },
    {
      "calendarDay": 1790636400000,
      "clock": "12:30pm",
      "dayLabel": "Sep 29",
      "longDate": "Tue, Sep 29",
      "nextMidnight": 1790722800000,
      "t": 1790681400000,
      "threeDaysBefore": 1790377200000,
      "weekday": "Tue",
    },
    {
      "calendarDay": 1767225600000,
      "clock": "9:05am",
      "dayLabel": "Jan 1",
      "longDate": "Thu, Jan 1",
      "nextMidnight": 1767312000000,
      "t": 1767258300000,
      "threeDaysBefore": 1766966400000,
      "weekday": "Thu",
    },
    {
      "calendarDay": 1774742400000,
      "clock": "2:30am",
      "dayLabel": "Mar 29",
      "longDate": "Sun, Mar 29",
      "nextMidnight": 1774825200000,
      "t": 1774747800000,
      "threeDaysBefore": 1774483200000,
      "weekday": "Sun",
    },
  ],
}
`;

exports[`format > times with the 24-hour clock 1`] = `
{
  "hours": [
    "00:00",
    "01:00",
    "02:00",
    "03:00",
    "04:00",
    "05:00",
    "06:00",
    "07:00",
    "08:00",
    "09:00",
    "10:00",
    "11:00",
    "12:00",
    "13:00",
    "14:00",
    "15:00",
    "16:00",
    "17:00",
    "18:00",
    "19:00",
    "20:00",
    "21:00",
    "22:00",
    "23:00",
  ],
  "out": [
    {
      "calendarDay": 1790636400000,
      "clock": "22:14",
      "dayLabel": "Sep 29",
      "longDate": "Tue, Sep 29",
      "nextMidnight": 1790722800000,
      "t": 1790716470000,
      "threeDaysBefore": 1790377200000,
      "weekday": "Tue",
    },
    {
      "calendarDay": 1790636400000,
      "clock": "22:09",
      "dayLabel": "Sep 29",
      "longDate": "Tue, Sep 29",
      "nextMidnight": 1790722800000,
      "t": 1790716170000,
      "threeDaysBefore": 1790377200000,
      "weekday": "Tue",
    },
    {
      "calendarDay": 1790636400000,
      "clock": "00:00",
      "dayLabel": "Sep 29",
      "longDate": "Tue, Sep 29",
      "nextMidnight": 1790722800000,
      "t": 1790636400000,
      "threeDaysBefore": 1790377200000,
      "weekday": "Tue",
    },
    {
      "calendarDay": 1790636400000,
      "clock": "03:59",
      "dayLabel": "Sep 29",
      "longDate": "Tue, Sep 29",
      "nextMidnight": 1790722800000,
      "t": 1790650740000,
      "threeDaysBefore": 1790377200000,
      "weekday": "Tue",
    },
    {
      "calendarDay": 1790636400000,
      "clock": "12:30",
      "dayLabel": "Sep 29",
      "longDate": "Tue, Sep 29",
      "nextMidnight": 1790722800000,
      "t": 1790681400000,
      "threeDaysBefore": 1790377200000,
      "weekday": "Tue",
    },
    {
      "calendarDay": 1767225600000,
      "clock": "09:05",
      "dayLabel": "Jan 1",
      "longDate": "Thu, Jan 1",
      "nextMidnight": 1767312000000,
      "t": 1767258300000,
      "threeDaysBefore": 1766966400000,
      "weekday": "Thu",
    },
    {
      "calendarDay": 1774742400000,
      "clock": "02:30",
      "dayLabel": "Mar 29",
      "longDate": "Sun, Mar 29",
      "nextMidnight": 1774825200000,
      "t": 1774747800000,
      "threeDaysBefore": 1774483200000,
      "weekday": "Sun",
    },
  ],
}
`;

exports[`format > working days starting at 0 1`] = `
{
  "days": [
    [
      1790636400000,
      1790550000000,
      1790722800000,
      1790118000000,
    ],
    [
      1790636400000,
      1790550000000,
      1790722800000,
      1790118000000,
    ],
    [
      1790636400000,
      1790550000000,
      1790722800000,
      1790118000000,
    ],
    [
      1790636400000,
      1790550000000,
      1790722800000,
      1790118000000,
    ],
    [
      1790636400000,
      1790550000000,
      1790722800000,
      1790118000000,
    ],
    [
      1767225600000,
      1767139200000,
      1767312000000,
      1766707200000,
    ],
    [
      1774742400000,
      1774656000000,
      1774825200000,
      1774224000000,
    ],
  ],
  "runs": "from midnight to midnight",
}
`;

exports[`format > working days starting at 4 1`] = `
{
  "days": [
    [
      1790650800000,
      1790564400000,
      1790737200000,
      1790132400000,
    ],
    [
      1790650800000,
      1790564400000,
      1790737200000,
      1790132400000,
    ],
    [
      1790564400000,
      1790478000000,
      1790650800000,
      1790046000000,
    ],
    [
      1790564400000,
      1790478000000,
      1790650800000,
      1790046000000,
    ],
    [
      1790650800000,
      1790564400000,
      1790737200000,
      1790132400000,
    ],
    [
      1767240000000,
      1767153600000,
      1767326400000,
      1766721600000,
    ],
    [
      1774670400000,
      1774584000000,
      1774753200000,
      1774152000000,
    ],
  ],
  "runs": "from 04:00 to 04:00",
}
`;

exports[`format > working days starting at 9 1`] = `
{
  "days": [
    [
      1790668800000,
      1790582400000,
      1790755200000,
      1790150400000,
    ],
    [
      1790668800000,
      1790582400000,
      1790755200000,
      1790150400000,
    ],
    [
      1790582400000,
      1790496000000,
      1790668800000,
      1790064000000,
    ],
    [
      1790582400000,
      1790496000000,
      1790668800000,
      1790064000000,
    ],
    [
      1790668800000,
      1790582400000,
      1790755200000,
      1790150400000,
    ],
    [
      1767258000000,
      1767171600000,
      1767344400000,
      1766739600000,
    ],
    [
      1774688400000,
      1774602000000,
      1774771200000,
      1774170000000,
    ],
  ],
  "runs": "from 09:00 to 09:00",
}
`;

exports[`labels > titles without the greeting 1`] = `
[
  [
    "hi",
    "hi",
    "hi",
  ],
  [
    "hi bro, fix the login redirect",
    "Fix the login redirect",
    "Fix the login redirect",
  ],
  [
    "Hey there can you please add a CSV export",
    "Add a CSV export",
    "Add a CSV export",
  ],
  [
    "hello! the build is broken",
    "The build is broken",
    "The build is broken",
  ],
  [
    "please check the tests",
    "Check the tests",
    "Check the tests",
  ],
  [
    "Could you kindly look at this",
    "Look at this",
    "Look at this",
  ],
  [
    "hiya",
    "hiya",
    "hiya",
  ],
  [
    null,
    "",
    "Untitled session",
  ],
  [
    "",
    "",
    "Untitled session",
  ],
  [
    "Fix the thing",
    "Fix the thing",
    "Fix the thing",
  ],
  [
    "yo claude what does this do",
    "What does this do",
    "What does this do",
  ],
]
`;

exports[`measure > by cost on cost 1`] = `
{
  "byTokens": false,
  "items": [
    {
      "col": "₹1,086+",
      "of": 12.345,
      "other": "1.2M tokens",
      "short": "₹1,086",
      "something": true,
      "text": "₹1,086+",
      "value": "≈ ₹10,86,41,896",
    },
    {
      "col": "₹0.09",
      "of": 0.001,
      "other": "0 tokens",
      "short": "₹0.09",
      "something": false,
      "text": "₹0.09",
      "value": "≈ ₹0.00",
    },
    {
      "col": "₹0.00",
      "of": 0,
      "other": "45K tokens",
      "short": "₹0.00",
      "something": false,
      "text": "₹0.00",
      "value": "≈ ₹39,60,000",
    },
    {
      "col": "₹1,32,000",
      "of": 1500,
      "other": "4.9B tokens",
      "short": "₹1,32,000",
      "something": true,
      "text": "₹1,32,000",
      "value": "≈ ₹4,31,20,00,00,000",
    },
  ],
}
`;

exports[`measure > by cost on overview 1`] = `
{
  "byTokens": false,
  "items": [
    {
      "col": "₹1,086+",
      "of": 12.345,
      "other": "1.2M tokens",
      "short": "₹1,086",
      "something": true,
      "text": "₹1,086+",
      "value": "≈ ₹10,86,41,896",
    },
    {
      "col": "₹0.09",
      "of": 0.001,
      "other": "0 tokens",
      "short": "₹0.09",
      "something": false,
      "text": "₹0.09",
      "value": "≈ ₹0.00",
    },
    {
      "col": "₹0.00",
      "of": 0,
      "other": "45K tokens",
      "short": "₹0.00",
      "something": false,
      "text": "₹0.00",
      "value": "≈ ₹39,60,000",
    },
    {
      "col": "₹1,32,000",
      "of": 1500,
      "other": "4.9B tokens",
      "short": "₹1,32,000",
      "something": true,
      "text": "₹1,32,000",
      "value": "≈ ₹4,31,20,00,00,000",
    },
  ],
}
`;

exports[`measure > by tokens on cost 1`] = `
{
  "byTokens": false,
  "items": [
    {
      "col": "₹1,086+",
      "of": 12.345,
      "other": "1.2M tokens",
      "short": "₹1,086",
      "something": true,
      "text": "₹1,086+",
      "value": "≈ ₹10,86,41,896",
    },
    {
      "col": "₹0.09",
      "of": 0.001,
      "other": "0 tokens",
      "short": "₹0.09",
      "something": false,
      "text": "₹0.09",
      "value": "≈ ₹0.00",
    },
    {
      "col": "₹0.00",
      "of": 0,
      "other": "45K tokens",
      "short": "₹0.00",
      "something": false,
      "text": "₹0.00",
      "value": "≈ ₹39,60,000",
    },
    {
      "col": "₹1,32,000",
      "of": 1500,
      "other": "4.9B tokens",
      "short": "₹1,32,000",
      "something": true,
      "text": "₹1,32,000",
      "value": "≈ ₹4,31,20,00,00,000",
    },
  ],
}
`;

exports[`measure > by tokens on overview 1`] = `
{
  "byTokens": true,
  "items": [
    {
      "col": "1.2M",
      "of": 1234567,
      "other": "≈ ₹1,086+",
      "short": "12",
      "something": true,
      "text": "1.2M tokens",
      "value": "1.2M tokens",
    },
    {
      "col": "—",
      "of": 0,
      "other": "≈ ₹0.09",
      "short": "0",
      "something": false,
      "text": "0 tokens",
      "value": "0 tokens",
    },
    {
      "col": "45K",
      "of": 45000,
      "other": "≈ ₹0.00",
      "short": "0",
      "something": true,
      "text": "45K tokens",
      "value": "45K tokens",
    },
    {
      "col": "4.9B",
      "of": 4900000000,
      "other": "≈ ₹1,32,000",
      "short": "1.5K",
      "something": true,
      "text": "4.9B tokens",
      "value": "4.9B tokens",
    },
  ],
}
`;

exports[`route > links and addresses 1`] = `
{
  "dayParams": [
    "2026-09-29",
    "2026-09-29",
    "2026-09-29",
    "2026-09-29",
    "2026-09-29",
    "2026-01-01",
    "2026-03-29",
  ],
  "days": [
    1790204400000,
    1798761600000,
    null,
    null,
    null,
  ],
  "hashes": [
    {
      "page": "",
      "params": {},
    },
    {
      "page": "",
      "params": {},
    },
    {
      "page": "cost",
      "params": {},
    },
    {
      "page": "sessions",
      "params": {
        "project": "shop",
        "range": "7",
      },
    },
    {
      "page": "session=abc",
      "params": {},
    },
    {
      "page": "sessions",
      "params": {
        "q": "a b",
      },
    },
  ],
  "links": [
    "#sessions",
    "#sessions?range=7&project=shop&q=a+b",
    "#projects?p=Kettle+API",
  ],
}
`;

exports[`search > the words of a search, and where they fall 1`] = `
{
  "marked": [
    "The <mark>dash</mark>board &lt;b&gt; is <mark>ready</mark>",
    "<mark>a</mark><mark>a</mark><mark>a</mark>",
    "no match here",
    "<mark>overlap</mark> <mark>overlap</mark>ping",
  ],
  "terms": [
    [],
    [
      "timezone",
    ],
    [
      "exact phrase",
      "and",
      "more",
    ],
    [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
      "g",
      "h",
    ],
    [
      "spaced",
      "out",
    ],
  ],
}
`;

exports[`sessions > totals over any range 1`] = `
[
  "demo-0 all: {"cost":20.56,"subCost":1.17,"tokens":41120000,"messages":23,"agentMs":2184499.7012615204,"waitMs":4406319.379806519,"waits":22,"added":0,"removed":0,"tools":184,"failed":5,"partial":false}",
  "demo-0 7 days: {"cost":20.56,"subCost":1.17,"tokens":41120000,"messages":23,"agentMs":2184499.7012615204,"waitMs":4406319.379806519,"waits":22,"added":0,"removed":0,"tools":184,"failed":5,"partial":false}",
  "demo-0 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-1 all: {"cost":1.77,"subCost":0.51,"tokens":3540000,"messages":3,"agentMs":187696.56658172607,"waitMs":146192.42906570435,"waits":2,"added":622,"removed":303,"tools":42,"failed":0,"partial":false}",
  "demo-1 7 days: {"cost":1.77,"subCost":0.51,"tokens":3540000,"messages":3,"agentMs":187696.56658172607,"waitMs":146192.42906570435,"waits":2,"added":622,"removed":303,"tools":42,"failed":0,"partial":false}",
  "demo-1 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-2 all: {"cost":9.41,"subCost":0.18,"tokens":18820000,"messages":13,"agentMs":3472772.251367569,"waitMs":591884.1075897217,"waits":12,"added":0,"removed":0,"tools":65,"failed":1,"partial":false}",
  "demo-2 7 days: {"cost":9.41,"subCost":0.18,"tokens":18820000,"messages":13,"agentMs":3472772.251367569,"waitMs":591884.1075897217,"waits":12,"added":0,"removed":0,"tools":65,"failed":1,"partial":false}",
  "demo-2 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-3 all: {"cost":19.05,"subCost":3.43,"tokens":38100000,"messages":12,"agentMs":2767211.7805480957,"waitMs":1982397.4227905273,"waits":11,"added":840,"removed":296,"tools":168,"failed":5,"partial":false}",
  "demo-3 7 days: {"cost":19.05,"subCost":3.43,"tokens":38100000,"messages":12,"agentMs":2767211.7805480957,"waitMs":1982397.4227905273,"waits":11,"added":840,"removed":296,"tools":168,"failed":5,"partial":false}",
  "demo-3 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-0 all: {"cost":8.17,"subCost":1.06,"tokens":16340000,"messages":8,"agentMs":731182.4798583984,"waitMs":1353921.4324951172,"waits":7,"added":337,"removed":165,"tools":80,"failed":4,"partial":false}",
  "demo-past-0 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-0 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-1 all: {"cost":28.61,"subCost":6.59,"tokens":57220000,"messages":18,"agentMs":6194128.4465789795,"waitMs":850440.1588439941,"waits":17,"added":251,"removed":76,"tools":234,"failed":5,"partial":false}",
  "demo-past-1 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-1 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-2 all: {"cost":3.57,"subCost":1.03,"tokens":7140000,"messages":12,"agentMs":4175197.9637145996,"waitMs":1615885.6201171875,"waits":11,"added":801,"removed":81,"tools":120,"failed":5,"partial":false}",
  "demo-past-2 7 days: {"cost":3.57,"subCost":1.03,"tokens":7140000,"messages":12,"agentMs":4175197.9637145996,"waitMs":1615885.6201171875,"waits":11,"added":801,"removed":81,"tools":120,"failed":5,"partial":false}",
  "demo-past-2 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-3 all: {"cost":1.37,"subCost":0.4,"tokens":2740000,"messages":1,"agentMs":164547.18589782715,"waitMs":239776.78298950195,"waits":0,"added":455,"removed":257,"tools":8,"failed":0,"partial":false}",
  "demo-past-3 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-3 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-4 all: {"cost":5.39,"subCost":0.88,"tokens":10780000,"messages":7,"agentMs":1241113.1858825684,"waitMs":1356768.8369750977,"waits":6,"added":633,"removed":303,"tools":70,"failed":3,"partial":false}",
  "demo-past-4 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-4 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-5 all: {"cost":17.12,"subCost":3.62,"tokens":34240000,"messages":24,"agentMs":9354398.68927002,"waitMs":4223772.811889648,"waits":23,"added":679,"removed":195,"tools":96,"failed":4,"partial":false}",
  "demo-past-5 7 days: {"cost":17.12,"subCost":3.62,"tokens":34240000,"messages":24,"agentMs":9354398.68927002,"waitMs":4223772.811889648,"waits":23,"added":679,"removed":195,"tools":96,"failed":4,"partial":false}",
  "demo-past-5 7 days to today: {"cost":17.12,"subCost":3.62,"tokens":34240000,"messages":24,"agentMs":9354398.68927002,"waitMs":4223772.811889648,"waits":23,"added":679,"removed":195,"tools":96,"failed":4,"partial":false}",
  "demo-past-6 all: {"cost":17.7,"subCost":4.58,"tokens":35400000,"messages":15,"agentMs":4125504.6129226685,"waitMs":88805.15098571777,"waits":14,"added":519,"removed":275,"tools":165,"failed":7,"partial":false}",
  "demo-past-6 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-6 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-7 all: {"cost":27.8,"subCost":2.53,"tokens":55600000,"messages":20,"agentMs":8353081.0832977295,"waitMs":3098315.0482177734,"waits":19,"added":78,"removed":0,"tools":80,"failed":3,"partial":false}",
  "demo-past-7 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-7 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-8 all: {"cost":16.73,"subCost":3.12,"tokens":33460000,"messages":24,"agentMs":5886505.8517456055,"waitMs":2677047.6722717285,"waits":23,"added":453,"removed":105,"tools":336,"failed":0,"partial":false}",
  "demo-past-8 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-8 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-9 all: {"cost":2.4,"subCost":0.51,"tokens":4800000,"messages":2,"agentMs":570977.4398803711,"waitMs":14056.49185180664,"waits":1,"added":248,"removed":28,"tools":18,"failed":0,"partial":false}",
  "demo-past-9 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-9 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-10 all: {"cost":2.4,"subCost":0.25,"tokens":4800000,"messages":5,"agentMs":1934210.729598999,"waitMs":531296.2532043457,"waits":4,"added":116,"removed":40,"tools":20,"failed":0,"partial":false}",
  "demo-past-10 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-10 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-11 all: {"cost":3.75,"subCost":0.69,"tokens":7500000,"messages":8,"agentMs":1604639.5111083984,"waitMs":1164956.8176269531,"waits":7,"added":205,"removed":104,"tools":80,"failed":2,"partial":false}",
  "demo-past-11 7 days: {"cost":3.75,"subCost":0.69,"tokens":7500000,"messages":8,"agentMs":1604639.5111083984,"waitMs":1164956.8176269531,"waits":7,"added":205,"removed":104,"tools":80,"failed":2,"partial":false}",
  "demo-past-11 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-12 all: {"cost":4.96,"subCost":0.21,"tokens":9920000,"messages":5,"agentMs":769411.5221500397,"waitMs":153419.20852661133,"waits":4,"added":433,"removed":39,"tools":60,"failed":2,"partial":false}",
  "demo-past-12 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-12 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-13 all: {"cost":4,"subCost":0.25,"tokens":8000000,"messages":15,"agentMs":917014.5928859711,"waitMs":726755.9051513672,"waits":14,"added":425,"removed":152,"tools":120,"failed":1,"partial":false}",
  "demo-past-13 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-13 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-14 all: {"cost":14.53,"subCost":0.2,"tokens":29060000,"messages":11,"agentMs":2203159.110546112,"waitMs":2446777.8396606445,"waits":10,"added":397,"removed":122,"tools":66,"failed":3,"partial":false}",
  "demo-past-14 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-14 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-15 all: {"cost":2.18,"subCost":0.18,"tokens":4360000,"messages":10,"agentMs":649671.7214584351,"waitMs":1412944.507598877,"waits":9,"added":154,"removed":68,"tools":100,"failed":2,"partial":false}",
  "demo-past-15 7 days: {"cost":2.18,"subCost":0.18,"tokens":4360000,"messages":10,"agentMs":649671.7214584351,"waitMs":1412944.507598877,"waits":9,"added":154,"removed":68,"tools":100,"failed":2,"partial":false}",
  "demo-past-15 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-16 all: {"cost":12.4,"subCost":1.39,"tokens":24800000,"messages":15,"agentMs":2833606.4100265503,"waitMs":496532.678604126,"waits":14,"added":833,"removed":249,"tools":180,"failed":6,"partial":false}",
  "demo-past-16 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-16 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-17 all: {"cost":13.82,"subCost":1.07,"tokens":27640000,"messages":13,"agentMs":2094634.3231201172,"waitMs":1387161.2548828125,"waits":12,"added":703,"removed":411,"tools":182,"failed":10,"partial":false}",
  "demo-past-17 7 days: {"cost":13.82,"subCost":1.07,"tokens":27640000,"messages":13,"agentMs":2094634.3231201172,"waitMs":1387161.2548828125,"waits":12,"added":703,"removed":411,"tools":182,"failed":10,"partial":false}",
  "demo-past-17 7 days to today: {"cost":13.82,"subCost":1.07,"tokens":27640000,"messages":13,"agentMs":2094634.3231201172,"waitMs":1387161.2548828125,"waits":12,"added":703,"removed":411,"tools":182,"failed":10,"partial":false}",
  "demo-past-18 all: {"cost":5.67,"subCost":0.63,"tokens":11340000,"messages":4,"agentMs":513490.21911621094,"waitMs":40133.22830200195,"waits":3,"added":585,"removed":56,"tools":40,"failed":1,"partial":false}",
  "demo-past-18 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-18 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-19 all: {"cost":6.87,"subCost":0.57,"tokens":13740000,"messages":9,"agentMs":1287679.3241500854,"waitMs":635245.2850341797,"waits":8,"added":219,"removed":19,"tools":72,"failed":3,"partial":false}",
  "demo-past-19 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-19 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-20 all: {"cost":14.21,"subCost":0.94,"tokens":28420000,"messages":9,"agentMs":978540.6267642975,"waitMs":725096.1112976074,"waits":8,"added":426,"removed":109,"tools":90,"failed":2,"partial":false}",
  "demo-past-20 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-20 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-21 all: {"cost":16.94,"subCost":3.55,"tokens":33880000,"messages":11,"agentMs":808044.548034668,"waitMs":1624054.8634529114,"waits":10,"added":207,"removed":118,"tools":44,"failed":0,"partial":false}",
  "demo-past-21 7 days: {"cost":16.94,"subCost":3.55,"tokens":33880000,"messages":11,"agentMs":808044.548034668,"waitMs":1624054.8634529114,"waits":10,"added":207,"removed":118,"tools":44,"failed":0,"partial":false}",
  "demo-past-21 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-22 all: {"cost":27.03,"subCost":0.09,"tokens":54060000,"messages":21,"agentMs":2304902.4836719036,"waitMs":1482952.766418457,"waits":20,"added":315,"removed":169,"tools":126,"failed":4,"partial":false}",
  "demo-past-22 7 days: {"cost":27.03,"subCost":0.09,"tokens":54060000,"messages":21,"agentMs":2304902.4836719036,"waitMs":1482952.766418457,"waits":20,"added":315,"removed":169,"tools":126,"failed":4,"partial":false}",
  "demo-past-22 7 days to today: {"cost":27.03,"subCost":0.09,"tokens":54060000,"messages":21,"agentMs":2304902.4836719036,"waitMs":1482952.766418457,"waits":20,"added":315,"removed":169,"tools":126,"failed":4,"partial":false}",
  "demo-past-23 all: {"cost":5.32,"subCost":0.68,"tokens":10640000,"messages":9,"agentMs":3356984.3101501465,"waitMs":685912.5137329102,"waits":8,"added":484,"removed":87,"tools":81,"failed":3,"partial":false}",
  "demo-past-23 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-23 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-24 all: {"cost":20.67,"subCost":2.26,"tokens":41340000,"messages":14,"agentMs":5093658.971786499,"waitMs":3218103.96194458,"waits":13,"added":466,"removed":141,"tools":98,"failed":2,"partial":false}",
  "demo-past-24 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-24 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-25 all: {"cost":5.68,"subCost":0.5,"tokens":11360000,"messages":4,"agentMs":1460614.5286560059,"waitMs":811440.9255981445,"waits":3,"added":89,"removed":47,"tools":16,"failed":0,"partial":false}",
  "demo-past-25 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-25 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-26 all: {"cost":16.92,"subCost":0.75,"tokens":33840000,"messages":12,"agentMs":3672529.420852661,"waitMs":1877856.674194336,"waits":11,"added":78,"removed":36,"tools":132,"failed":6,"partial":false}",
  "demo-past-26 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-26 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-27 all: {"cost":9.33,"subCost":0.24,"tokens":18660000,"messages":10,"agentMs":3951844.7041511536,"waitMs":1977854.6333312988,"waits":9,"added":0,"removed":0,"tools":120,"failed":6,"partial":false}",
  "demo-past-27 7 days: {"cost":9.33,"subCost":0.24,"tokens":18660000,"messages":10,"agentMs":3951844.7041511536,"waitMs":1977854.6333312988,"waits":9,"added":0,"removed":0,"tools":120,"failed":6,"partial":false}",
  "demo-past-27 7 days to today: {"cost":9.33,"subCost":0.24,"tokens":18660000,"messages":10,"agentMs":3951844.7041511536,"waitMs":1977854.6333312988,"waits":9,"added":0,"removed":0,"tools":120,"failed":6,"partial":false}",
  "demo-past-28 all: {"cost":5.76,"subCost":0.77,"tokens":11520000,"messages":6,"agentMs":2488235.263824463,"waitMs":141289.9249792099,"waits":5,"added":282,"removed":26,"tools":48,"failed":0,"partial":false}",
  "demo-past-28 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-28 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-29 all: {"cost":26.79,"subCost":7.19,"tokens":53580000,"messages":23,"agentMs":2868945.6367492676,"waitMs":4274461.283683777,"waits":22,"added":394,"removed":34,"tools":184,"failed":5,"partial":false}",
  "demo-past-29 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-29 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-30 all: {"cost":15.92,"subCost":1.74,"tokens":31840000,"messages":20,"agentMs":5663692.760467529,"waitMs":1388698.7686157227,"waits":19,"added":409,"removed":128,"tools":280,"failed":7,"partial":false}",
  "demo-past-30 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-30 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-31 all: {"cost":19.68,"subCost":1.99,"tokens":39360000,"messages":13,"agentMs":4329069.700241089,"waitMs":2601542.5300598145,"waits":12,"added":0,"removed":0,"tools":104,"failed":5,"partial":false}",
  "demo-past-31 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-31 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-32 all: {"cost":14.76,"subCost":4.31,"tokens":29520000,"messages":10,"agentMs":3904825.6874084473,"waitMs":1922166.2521362305,"waits":9,"added":0,"removed":0,"tools":80,"failed":3,"partial":false}",
  "demo-past-32 7 days: {"cost":14.76,"subCost":4.31,"tokens":29520000,"messages":10,"agentMs":3904825.6874084473,"waitMs":1922166.2521362305,"waits":9,"added":0,"removed":0,"tools":80,"failed":3,"partial":false}",
  "demo-past-32 7 days to today: {"cost":14.76,"subCost":4.31,"tokens":29520000,"messages":10,"agentMs":3904825.6874084473,"waitMs":1922166.2521362305,"waits":9,"added":0,"removed":0,"tools":80,"failed":3,"partial":false}",
  "demo-past-33 all: {"cost":8.97,"subCost":0.83,"tokens":17940000,"messages":7,"agentMs":2063778.8772583008,"waitMs":1341218.0471420288,"waits":6,"added":202,"removed":26,"tools":35,"failed":0,"partial":false}",
  "demo-past-33 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-33 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-34 all: {"cost":33.08,"subCost":7.98,"tokens":66160000,"messages":21,"agentMs":8615514.478683472,"waitMs":2376641.37840271,"waits":20,"added":505,"removed":32,"tools":273,"failed":6,"partial":false}",
  "demo-past-34 7 days: {"cost":33.08,"subCost":7.98,"tokens":66160000,"messages":21,"agentMs":8615514.478683472,"waitMs":2376641.37840271,"waits":20,"added":505,"removed":32,"tools":273,"failed":6,"partial":false}",
  "demo-past-34 7 days to today: {"cost":33.08,"subCost":7.98,"tokens":66160000,"messages":21,"agentMs":8615514.478683472,"waitMs":2376641.37840271,"waits":20,"added":505,"removed":32,"tools":273,"failed":6,"partial":false}",
  "demo-past-35 all: {"cost":20.23,"subCost":4.29,"tokens":40460000,"messages":24,"agentMs":8014697.341918945,"waitMs":3937180.0231933594,"waits":23,"added":273,"removed":95,"tools":264,"failed":7,"partial":false}",
  "demo-past-35 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-35 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-36 all: {"cost":5.52,"subCost":1,"tokens":11040000,"messages":8,"agentMs":913460.0830078125,"waitMs":1416408.462524414,"waits":7,"added":327,"removed":93,"tools":40,"failed":2,"partial":false}",
  "demo-past-36 7 days: {"cost":5.52,"subCost":1,"tokens":11040000,"messages":8,"agentMs":913460.0830078125,"waitMs":1416408.462524414,"waits":7,"added":327,"removed":93,"tools":40,"failed":2,"partial":false}",
  "demo-past-36 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-37 all: {"cost":2.39,"subCost":0.68,"tokens":4780000,"messages":2,"agentMs":700165.6723022461,"waitMs":64357.69557952881,"waits":1,"added":395,"removed":135,"tools":16,"failed":0,"partial":false}",
  "demo-past-37 7 days: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
  "demo-past-37 7 days to today: {"cost":0,"subCost":0,"tokens":0,"messages":0,"agentMs":0,"waitMs":0,"waits":0,"added":0,"removed":0,"tools":0,"failed":0,"partial":false}",
]
`;
